--- a/Day1/SpringBootBasic/src/main/resources/application.properties
+++ b/Day1/SpringBootBasic/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-dispMessage=Hello World display Message from application.properties
+displayMessage=Hello World display Message from application.properties
 loginMessage=Hello World loginMessage from application.properties
 errorMessage=errorMessage from application.properties
