--- a/Day4/SpringBootRESTJPATestApp/src/main/resources/application.properties
+++ b/Day4/SpringBootRESTJPATestApp/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.jsp
 #H2 DB
 spring.datasource.url=jdbc:h2:file:./Database
 
-#spring.jpa.properties.hibernate.hbm2ddl
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 
 #hibernate configuration
